--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,7 @@
             width: 320px;
             padding: 15px;
             font-family: Arial, sans-serif;
-            background: rgba(28, 28, 35, 0.85);
-            backdrop-filter: blur(10px);
+            background: #121212;
             color: #ffffff;
             margin: 0;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
@@ -57,6 +56,7 @@
             background: rgba(255, 255, 255, 0.05);
             border-radius: 6px;
             transition: background 0.2s ease;
+            flex-direction: column;
         }
 
         .hotkey-row:hover {
@@ -68,7 +68,7 @@
             padding: 5px 8px;
             text-align: center;
             background: rgba(0, 0, 0, 0.2);
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.251);
             border-radius: 4px;
             color: #fff;
             transition: all 0.2s ease;
@@ -76,7 +76,7 @@
 
         input:focus {
             outline: none;
-            border-color: rgba(255, 255, 255, 0.3);
+            border-color: rgba(255, 255, 255, 0.673);
             background: rgba(0, 0, 0, 0.3);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
@@ -100,13 +100,14 @@
 
         .notification {
             position: fixed;
-            bottom: 20px;
+            bottom: 70px;
             left: 50%;
             transform: translateX(-50%);
-            background: rgba(48, 48, 58, 0.95);
+            background: #48c743;
             padding: 12px 20px;
+            width: 50%;
             border-radius: 8px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+            box-shadow: 0px 0px 35px 9px rgba(0, 0, 0, 0.2);
             z-index: 1000;
             text-align: center;
             backdrop-filter: blur(5px);
@@ -120,6 +121,28 @@
             visibility: visible;
         }
 
+        .notification-2 {
+            position: fixed;
+            bottom: 70px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #c74343;
+            padding: 12px 20px;
+            width: 50%;
+            border-radius: 8px;
+            box-shadow: 0px 0px 35px 9px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            text-align: center;
+            backdrop-filter: blur(5px);
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
+        }
+
+        .notification-2.show {
+            opacity: 1;
+            visibility: visible;
+        }
 
         @keyframes fadeIn {
             from {
@@ -134,6 +157,57 @@
         .fade-in {
             animation: fadeIn 0.3s ease;
         }
+
+        .buttons-container {
+            display: flex;
+            gap: 10px;
+            margin-top: 15px;
+        }
+
+        .btn-primary {
+            flex: 2;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .btn-secondary {
+            flex: 1;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.05);
+            color: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 6px;
+            cursor: pointer;
+            transition: all 0.2s ease;
+        }
+
+        .btn-primary:hover,
+        .btn-secondary:hover {
+            background: rgba(255, 255, 255, 0.2);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+        }
+
+        .reset-button {
+            background: transparent;
+            border: none;
+            color: rgba(255, 255, 255, 0.4);
+            cursor: pointer;
+            padding: 4px;
+            border-radius: 4px;
+            font-size: 12px;
+            transition: all 0.2s ease;
+            margin-top: 10px;
+        }
+
+        .reset-button:hover {
+            color: rgba(255, 255, 255, 0.8);
+            background: rgba(255, 255, 255, 0.1);
+        }
     </style>
 </head>
 
@@ -145,13 +219,20 @@
         <!-- Контейнер будет заполнен через JavaScript -->
     </div>
 
-    <button id="saveBtn" class="fade-in">Сохранить настройки</button>
+    <div class="buttons-container fade-in">
+        <button id="saveBtn" class="btn-primary">Сохранить настройки</button>
+        <button id="resetAllBtn" class="btn-secondary">Сбросить всё</button>
+    </div>
 
     <div id="notification" class="notification">
         Настройки сохранены
     </div>
+    <div id="notification" class="notification">
+        Настройки сброшены
+    </div>
 
     <script src="popup.js"></script>
+
 </body>
 
 </html>
