--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,18 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <meta charset="UTF-8">
     <style>
+        * {
+            font-family: inter;
+            cursor: default;
+        }
+
         body {
             width: 320px;
             padding: 15px;
@@ -11,6 +21,7 @@
             color: #ffffff;
             margin: 0;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+
         }
 
         h2 {
@@ -49,18 +60,26 @@
 
         .hotkey-row {
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            flex-direction: column;
             margin: 8px 0;
-            padding: 8px;
+            padding: 16px;
             background: rgba(255, 255, 255, 0.05);
             border-radius: 6px;
             transition: background 0.2s ease;
-            flex-direction: column;
         }
 
         .hotkey-row:hover {
             background: rgba(255, 255, 255, 0.1);
+        }
+
+        .hotkey-row-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .hotkey-row-content>span {
+            font-weight: 700;
         }
 
         input {
@@ -72,6 +91,8 @@
             border-radius: 4px;
             color: #fff;
             transition: all 0.2s ease;
+            font-weight: 800;
+            cursor: pointer;
         }
 
         input:focus {
@@ -79,6 +100,7 @@
             border-color: rgba(255, 255, 255, 0.673);
             background: rgba(0, 0, 0, 0.3);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            cursor: pointer;
         }
 
         button {
@@ -103,7 +125,6 @@
             bottom: 70px;
             left: 50%;
             transform: translateX(-50%);
-            background: #48c743;
             padding: 12px 20px;
             width: 50%;
             border-radius: 8px;
@@ -121,27 +142,16 @@
             visibility: visible;
         }
 
-        .notification-2 {
-            position: fixed;
-            bottom: 70px;
-            left: 50%;
-            transform: translateX(-50%);
-            background: #c74343;
-            padding: 12px 20px;
-            width: 50%;
-            border-radius: 8px;
-            box-shadow: 0px 0px 35px 9px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
-            text-align: center;
-            backdrop-filter: blur(5px);
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease, visibility 0.3s ease;
+        .notification-success {
+            background: #48c743;
         }
 
-        .notification-2.show {
-            opacity: 1;
-            visibility: visible;
+        .notification-error {
+            background: #c74343;
+        }
+
+        .notification-duplicate {
+            background: #ffcc00;
         }
 
         @keyframes fadeIn {
@@ -173,6 +183,7 @@
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.2s ease;
+            font-weight: 600;
         }
 
         .btn-secondary {
@@ -184,16 +195,21 @@
             border-radius: 6px;
             cursor: pointer;
             transition: all 0.2s ease;
+            font-weight: 600;
         }
 
-        .btn-primary:hover,
+
         .btn-secondary:hover {
-            background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+            background: rgb(255, 61, 61);
+
+        }
+
+        .btn-primary:hover {
+            background: rgb(74, 196, 47)
         }
 
         .reset-button {
-            background: transparent;
+            background: rgba(11, 11, 11, 0.1);
             border: none;
             color: rgba(255, 255, 255, 0.4);
             cursor: pointer;
@@ -202,11 +218,12 @@
             font-size: 12px;
             transition: all 0.2s ease;
             margin-top: 10px;
+            font-weight: 200;
         }
 
         .reset-button:hover {
             color: rgba(255, 255, 255, 0.8);
-            background: rgba(255, 255, 255, 0.1);
+            background: rgb(255, 61, 61);
         }
     </style>
 </head>
@@ -224,11 +241,14 @@
         <button id="resetAllBtn" class="btn-secondary">Сбросить всё</button>
     </div>
 
-    <div id="notification" class="notification">
+    <div id="notification-success" class="notification notification-success">
         Настройки сохранены
     </div>
-    <div id="notification" class="notification">
+    <div id="notification-error" class="notification notification-error">
         Настройки сброшены
+    </div>
+    <div id="notification-duplicate" class="notification notification-duplicate">
+        Такая кнопка уже назначена
     </div>
 
     <script src="popup.js"></script>
